--- a/非数值运算/排序/整数排序/三种排序方法的比较/SortCompare/Makefile.win
+++ b/非数值运算/排序/整数排序/三种排序方法的比较/SortCompare/Makefile.win
@@ -6,9 +6,9 @@ CC       = gcc.exe
 WINDRES  = windres.exe
 OBJ      = SortCompare.o $(RES)
 LINKOBJ  = SortCompare.o $(RES)
-LIBS     = -L"E:/Dev-Cpp/MinGW32/lib" -static-libstdc++ -static-libgcc
-INCS     = -I"E:/Dev-Cpp/MinGW32/include"
-CXXINCS  = -I"E:/Dev-Cpp/MinGW32/include"
+LIBS     = -L"E:/Dev-cpp5.4.0及API帮助文档/Dev-Cpp/MinGW32/lib" -static-libstdc++ -static-libgcc
+INCS     = -I"E:/Dev-cpp5.4.0及API帮助文档/Dev-Cpp/MinGW32/include"
+CXXINCS  = -I"E:/Dev-cpp5.4.0及API帮助文档/Dev-Cpp/MinGW32/include"
 BIN      = SortCompare.exe
 CXXFLAGS = $(CXXINCS) 
 CFLAGS   = $(INCS) 
